# nothing-todo-cloud

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yaml  package-lock.json
.github/workflows/: release.yml
backend/: Cargo.toml  config.yaml
backend/src/: config.rs  error.rs  main.rs  state.rs
backend/src/db/: mod.rs  schema.rs
backend/src/db/schema/: api_token.rs  device.rs  device_snapshot.rs  sync_log.rs  user.rs  user_skill.rs  user_snapshot.rs  user_tag.rs  user_todo.rs
backend/src/handlers/: admin.rs  auth.rs  device.rs  mod.rs  sync.rs  todo.rs  token.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/services/: auth_service.rs  device_service.rs  mod.rs  sync_service.rs
backend/tests/: sync_test.rs
docs/: SYNC_API.md  SYNC_DESIGN.md  UI_FIXES.md
frontend/: e2e.test.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/e2e/: ntd_cloud_test.cjs
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/pages/: Dashboard.tsx  Devices.tsx  Login.tsx  Settings.tsx  Snapshots.tsx  Todos.tsx  Tokens.tsx
tests/: sync_comprehensive.sh  sync_dryrun_test.sh  sync_multi_device.sh
