[package]
name = "ntd-cloud-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Frontend embedding
rust-embed = "8"

# Database
sea-orm = { version = "0.12", features = ["sqlite-tokio", "runtime-tokio-native-tls", "macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"

# Config
config = "0.14"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Compression
flate2 = "1"
base64 = "0.22"

# Validation
validator = { version = "0.16", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
